tests/parser-test-files/bad-files/define-type.4.error
error: Malformed constructor
  --> test:5:3
   |
 4 |  (define-type (T :a)
   |               ------ in this type definition
 5 |    ((T) :a))
   |     ^^^ expected symbol
